<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_1"
        android:id="@+id/button1"
        android:onClick="sendMessage"
        android:layout_marginTop="40px"
        android:background="#F08C35"
        android:layout_below="@+id/main_title"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_2"
        android:id="@+id/button2"
        android:onClick="sendMessage"
        android:layout_marginTop="40px"
        android:background="#F08C35"
        android:layout_below="@+id/button1"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_3"
        android:id="@+id/button3"
        android:onClick="sendMessage"
        android:layout_marginTop="40px"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#F08C35" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_4"
        android:id="@+id/button4"
        android:onClick="sendMessage"
        android:layout_marginTop="40px"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:background="#F08C35" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_5"
        android:id="@+id/button5"
        android:onClick="sendMessage"
        android:layout_marginTop="40px"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:background="#F08C35" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_6"
        android:id="@+id/button"
        android:onClick="sendMessage"
        android:layout_marginTop="40px"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:background="#F44336" />

</RelativeLayout>
